Don't fail stacktrace collection if we're unable to resolve a symbol

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.2.0-rc0, 8.1.2, 8.0.13, 7.0.26
    • Affects Version/s: None
    • Component/s: None
    • None
    • Server Programmability
    • Fully Compatible
    • ALL
    • v8.1, v8.0, v7.0
    • Programmability 2025-05-12
    • 200
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      It's better to have a stacktrace, with a complete set of instruction addresses and a partial set of symbol resolution, than an error. This is true even if the error contains all the addresses found, but none of the symbols.

            Assignee:
            Ronald Steinke (Inactive)
            Reporter:
            Ronald Steinke (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: