SERVER-104543 fix stacktrace error handling (#35604) (#35651)

GitOrigin-RevId: a6152e5781ddc2c0aa8f80f0242d7623f049b582