src/mongo/util/stacktrace_libunwind_test.cpp
@@ -54,6 +54,9 @@
 
 #define MONGO_LOGV2_DEFAULT_COMPONENT ::mongo::logv2::LogComponent::kTest
 
+#if defined(__s390__) || defined(__s390x__) || defined(__zarch__)
+#define MONGO_S390 1
+#endif
 
 namespace mongo {
 
@@ -126,6 +129,12 @@ void assertAndRemoveSuffix(std::string_view& v, std::string_view suffix) {
     ASSERT(pos != v.npos) << "expected to find '{}' in '{}'"_format(suffix, v);
     v.remove_suffix(v.size() - pos);
 }
+
+// On our current version of libunwind, unw_get_proc_name() is failing
+// consistently on s390. This isn't a problem for our production stack
+// traces, as falling back to dladdr() works. It does, however, break
+// these libunwind-specific tests.
+#ifndef MONGO_S390
 
 TEST(Unwind, Demangled) {
     // Trickery with std::vector<std::function> is to hide from the optimizer.
@@ -200,6 +209,8 @@ TEST(Unwind, Linkage) {
         remainder.remove_prefix(pos);
     }
 }
+
+#endif  // MONGO_S390
 
 }  // namespace unwind_test_detail
 }  // namespace mongo
